--- a/style.css
+++ b/style.css
@@ -1,182 +1,273 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800;900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font: ;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font: ;
 }
-:root{
-    --block-font: #000;
+:root {
+  --block-font: #000;
 }
-body{
-    background-color: white;
-    height: 200vh;
-    font-family: 'Inter', sans-serif;
-}
-
-.container{
-    /* border: 1px solid red; */
-    max-width: 1200px;
-margin: auto;
-padding: 2rem;
-}
-.btn{
-    padding: 1rem 3rem;
-    border-radius: 40px;
-    font-size: 18px;
-    cursor: pointer;
-}
-.btn:hover{
-    background-color: #E2E7E5;;
+body {
+  background-color: white;
+  height: 200vh;
+  font-family: "Inter", sans-serif;
 }
 
-
-header{
-    background: linear-gradient(to right, #E1ECE8, #F4F8F7)
+.container {
+  /* border: 1px solid red; */
+  max-width: 1200px;
+  margin: auto;
+  padding: 2rem;
+}
+.btn {
+  padding: 1rem 3rem;
+  border-radius: 40px;
+  font-size: 18px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #e2e7e5;
 }
 
-header .container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.header-left{
-    display: flex;
-    align-items: center;
-    gap: 2rem;
+header {
+  background: linear-gradient(to right, #e1ece8, #f4f8f7);
 }
 
-.header-left img{
-    width: 140px;
+header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
 }
 
-.header-left .links{
- display: flex;
- align-items: center;
- gap: 1.5rem;
+.header-left img {
+  width: 140px;
 }
 
-.header-left .links a{
-    text-decoration: none;
-    color: var(--black-font);
+.header-left .links {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-.header-right{
-    display: flex;
-    align-items: center;
-    gap: .8rem;
-}
-.header-right i{
-    font-size: 1.3rem;
-    cursor: pointer;
-    height: 50px;
-    width: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-    border-radius: 50%;
-    transition: 5s;
-}
-.header-right i:hover{
-    background-color: #000;
-    color: #fff;
+.header-left .links a {
+  text-decoration: none;
+  color: var(--black-font);
 }
 
-section.hero{
-    height: calc(100vh -120px);
-    background: linear-gradient(135deg, #E1ECE8, #F4F8F7)
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
 }
-section.hero .container{
-    display: flex;
-    align-items: center;
-    /* gap: 30px; */
+.header-right i {
+  font-size: 1.3rem;
+  cursor: pointer;
+  height: 50px;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: 5s;
 }
-.hero-left, .hero-right{
-    flex: 1;
-}
-
-.hero-left{
-display: flex;
-flex-direction: column;
-gap: 1.5rem;
-}
-.hero-left h1{
-    font-size: 3.5rem;
-    font-weight: 400;
-}
-
-.hero-left p{
-    font-size: 18px;
-   line-height: 27px;
+.header-right i:hover {
+  background-color: #000;
+  color: #fff;
 }
 
-.hero-left .buttons button:nth-of-type(1){
-background-color: #A0E907;
-border: none;
+section.hero {
+  height: calc(100vh -120px);
+  background: linear-gradient(135deg, #e1ece8, #f4f8f7);
+}
+section.hero .container {
+  display: flex;
+  align-items: center;
+  /* gap: 30px; */
+}
+.hero-left,
+.hero-right {
+  flex: 1;
 }
 
-.hero-left .buttons button:nth-of-type(1):hover{
-background-color: #CAFF5C;
-border: none;
+.hero-left {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.hero-left h1 {
+  font-size: 3.5rem;
+  font-weight: 400;
 }
 
-.hero-left .buttons button:nth-of-type(2){
-
+.hero-left p {
+  font-size: 18px;
+  line-height: 27px;
 }
 
-.specialist{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-.specialist img{
-    width: 70px;
+.hero-left .buttons button:nth-of-type(1) {
+  background-color: #a0e907;
+  border: none;
 }
 
-.specialist div{
-    display: flex;
+.hero-left .buttons button:nth-of-type(1):hover {
+  background-color: #caff5c;
+  border: none;
+}
+
+.hero-left .buttons button:nth-of-type(2) {
+}
+
+.specialist {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.specialist img {
+  width: 70px;
+}
+
+.specialist div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.specialist div span {
+  font-size: 14px;
+}
+
+.specialist div a {
+  font-size: 14px;
+  color: var(--black-font);
+}
+
+.hero-right img {
+  height: 100%;
+  width: 100%;
+  object-fit: center;
+}
+
+@media (max-width: 990px) {
+  .header-left img {
+    width: 100px;
+  }
+  .header-left .links {
+    display: none;
+  }
+  .header-right i {
+    display: none;
+  }
+
+  .hero .container {
     flex-direction: column;
-    align-items: flex-start;
-    gap: 5px;
+  }
+  .hero-left h1 {
+    font-size: 2.5rem;
+  }
+  section.hero {
+    height: unset;
+  }
 }
 
-.specialist div span{
-   font-size: 14px;
+.animation {
+  background-color: black;
+  height: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.specialist div a{
-     font-size: 14px;
-     color: var(--black-font);
+.animation-icon {
+  width: 100%;
+  /* border: 2px solid red; */
+  gap: 9rem;
+  overflow: hidden;
+  display: flex;
 }
 
-.hero-right img{
-    height: 100%;
-    width: 100%;
-    object-fit: center;
+.animation-icon img {
+  /* animation: different 15s linear infinite; */
 }
 
- @media (max-width:990px){
-    .header-left img {
-        width: 100px;
-      }
-.header-left .links{
-        display: none;
-    }
-    .header-right i{
-        display: none;
-    }
+@keyframes different {
+  0% {
+    transform: translateX(95rem);
+  }
+  100% {
+    transform: translateX(-180rem);
+  }
+}
 
-    .hero .container{
-        flex-direction: column;
-    }
-    .hero-left h1{
-        font-size: 2.5rem;
-    }
-    section.hero{
-        height: unset;
+.video-container {
+  /* border: 2px solid red; */
+  height: 120vh;
+  display: flex;
+}
+.video {
+  /* border: 2px solid blue; */
+  flex: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.border {
+    border-radius: 1rem;
+  height: 30rem;
+  width: 40rem;
+  background-image: url(./img/videoframe_6333.png);
+  background-position: center;
+  background-size: cover;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+.border p{
+    margin-top: 1rem;
+color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.video-text {
+  /* border: 1px solid chartreuse; */
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
-        
-        }
- }
+.video-text p:nth-child(1) {
+   font-size: 3rem;
+}
+.video-text p:nth-child(2) {
+   margin-top: 1.5rem;
+   margin-right: 5rem;
+   line-height: 1.7rem;
+}
 
+@media screen and (max-width:1200px) {
+ .video-container {
+ flex-direction: column-reverse;
+ 
+}
+.video-text {
+    /* border: 2px solid red; */
+margin-top: 15rem;
+margin-left: 4rem;
+}
+.border{
+    width: 90%;
+}
+
+}
